# GenAI-Test

./: .gitignore  README.md
llama3.2-vision/multi-modal-app/: README.md  app.py  pyproject.toml
llama3.2-vision/multi-modal-app-with-ollama/: README.md  app.py  pyproject.toml
ollama/: call_ollama_api.py  categorizer.py  create_model.py  hello.py  list_models.py  pdf-rag.py  pyproject.toml  requirements.txt
ollama/data/: llama3.2_categorized_grocery_list.txt
ollama/simple-rag/: README.md  pdf-rag-ui.py  pdf-rag.py  requirements.txt
ollama_app/: README.md  call_ollama_api.py  categorizer.py  generate.py  pyproject.toml  simple_chat.py
ollama_app/data/: gemma2:9b_categorized_grocery_list.txt
pydanticai/: README.md  ex1.py  ex2.py  ex3.py  pyproject.toml
removeBG/: README.md  app.py
streamlit/: app.py
streamlit-uv-Cerebras/: README.md  pyproject.toml
streamlit-uv-Cerebras/app/: app.py
webllm/: package.json  pnpm-lock.yaml
webllm/src/: App.tsx
