[project]
name = "ollama-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.23",
    "elevenlabs>=1.50.3",
    "langchain>=0.3.13",
    "langchain-community>=0.3.13",
    "langchain-core>=0.3.28",
    "langchain-ollama>=0.2.2",
    "langchain-text-splitters>=0.3.4",
    "ollama>=0.4.4",
    "onnxruntime>=1.20.1",
    "onnxruntime-gpu>=1.20.1",
    "pdfplumber>=0.11.4",
    "py-rust-stemmers>=0.1.3",
    "requests>=2.32.3",
    "sentence-transformers>=3.3.1",
    "unstructured>=0.14.8",
]
